# microgpt-c

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DATA_LICENSE.md  FAQ.md  KANBAN.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  VALUE_PROPOSITION.md  VISION.md  bootstrap.bat  bootstrap.sh  build.bat  build.sh  build_quantised.bat  build_quantised.sh  main.c  microgpt.c  microgpt.h  microgpt_amalgamated.c
.agent/workflows/: run-definition-of-done.md  spear.md  use-kanban.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
book/: 1.md  11.md  12.md  14.md  15.md  16.md  17.md  2.md  4.md  5.md  6.md  7.md  8.md  A.md  MicroGPT-C_Composable_Intelligence_at_the_Edge.md  cover_page.tex  default_template_output.tex  eq_numbering.py  render_mermaid.py  replace_mermaid.py  template.tex
demos/: README.md
demos/character-level/c99_compose/: README.md  c_judge.txt  c_planner.txt  c_registry.txt  main.c  test_intents.txt
demos/character-level/connect4/: c_connect4_planner.txt  main.c
demos/character-level/hex/: README.md  c_hex5_player.txt  c_hex_planner.txt  main.c
demos/character-level/klotski/: README.md  main.c
demos/character-level/lightsout/: README.md  c_lightsout_planner.txt  c_lightsout_player.txt  main.c
demos/character-level/lottery/: README.md  c_lottery_predictor.txt  download_results.py  main.c
demos/character-level/mastermind/: README.md  c_mastermind_planner.txt  c_mastermind_player.txt  generate_corpus.py  main.c
demos/character-level/names/: README.md  main.c
demos/character-level/optim_bench/: main.c
demos/character-level/othello/: README.md  c_othello_planner.txt  c_othello_player.txt  generate_corpus.py  main.c
demos/character-level/pentago/: README.md  c_pentago_planner.txt  main.c
demos/character-level/puzzle8/: README.md  c_puzzle8_detour_detector.txt  c_puzzle8_judge.txt  main.c
demos/character-level/puzzle8_reasoning/: README.md  c_puzzle8_mover_combined.txt  c_puzzle8_mover_enriched.txt  main.c
demos/character-level/reddonkey/: README.md  c_rd54_planner.txt  generate_corpus.py  main.c
demos/character-level/shakespeare/: README.md  main.c
demos/character-level/sudoku/: README.md  c_sudoku_planner.txt  c_sudoku_player.txt  generate_corpus.py  main.c
demos/character-level/tictactoe/: README.md  c_tictactoe_planner.txt  c_tictactoe_player.txt  main.c
demos/character-level/tictactoe_transfer_othello/: README.md  main.c
demos/character-level/tictactoe_transfer_planner_to_player/: README.md  main.c
demos/character-level/vm_codegen/: README.md  c_vm_functions.txt  c_vm_functions_combined.txt  c_vm_functions_pretok.txt  generate_variations.py  main.c
demos/character-level/vm_compose/: main.c  test_intents_clean.txt
demos/word-level/hex/: main_word.c  w_hex_player.txt
demos/word-level/shakespeare/: README.md  main.c
demos/word-level/vm_codegen/: README.md  main.c  pretokenize_corpus.py
docs/: .gitignore  ARCHITECTURE.md  BUILD_OPTIONS.md  DESIGN.md  FUNCTIONAL_SPEC.md  LIBRARY_GUIDE.md  PERFORMANCE.md  character-level.md  word-level.md
docs/book/: 0.md  1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  A.md  MicroGPT-C_Composable_Intelligence_at_the_Edge.md  _build.sh  _merge.sh  cover_page.tex  default_template_output.tex  extract_mermaid.py  mermaid_c42be271.mmd
docs/foundation/: ATTENTION_MECHANISMS.md  CHARACTER_LEVEL.md  TRAINING_STRATEGIES.md  WORD_LEVEL.md
docs/organelles/: ORGANELLE_GAMES.md  ORGANELLE_GENERALISATION.md  ORGANELLE_GENERALISATION_VM.md  ORGANELLE_INTELLIGENCE.md  ORGANELLE_NAR.md  ORGANELLE_PIPELINE.md  ORGANELLE_PLANNER.md  ORGANELLE_REASONING.md  ORGANELLE_REASONING_CONCLUSION.md  ORGANELLE_VISION.md  ORGANELLE_VM.md  ORGANELLE_WHY_LOGIC_GAMES.md
docs/research/: RESEARCH_CHARACTER_LEVEL.md  RESEARCH_GENERALISATION.md  RESEARCH_INTELLIGENCE.md  RESEARCH_OPTIMISATION.md  RESEARCH_OPTIMISATIONS.md  RESEARCH_ORGANELLE_GAMES.md  RESEARCH_ORGANELLE_PIPELINE.md  RESEARCH_ORGANELLE_PLANNER.md  RESEARCH_ORGANELLE_REASONING.md  RESEARCH_ORGANELLE_VISION.md  RESEARCH_SSD.md  RESEARCH_TRAINING_STRATEGIES.md  RESEARCH_TRANSFORMER.md  RESEARCH_WORD_LEVEL.md  RESEARCH_WORD_LEVEL_ORGANELLE.md
docs/testing/: GRADIENT_ACCURACY.md
examples/names/: main.c
examples/shakespeare/: main.c
experiments/organelles/: README.md
experiments/organelles/c_codegen/: README.md  c_functions.txt  generate_variations.py  main.c
experiments/organelles/c_compose/: README.md  generate_corpus.py  main.c
experiments/organelles/c_compose_v3/: main.c
experiments/organelles/c_wiringgen/: README.md  c_wiring.txt  generate_variations.py  main.c
models/: README.md
models/character-level/: c_hex_planner.ckpt  c_klotski_planner.ckpt  c_klotski_player.ckpt  c_lightsout_player.ckpt  c_lottery_analyser.ckpt  c_lottery_predictor.ckpt  c_mastermind_planner.ckpt  c_mastermind_player.ckpt  c_othello_player.ckpt  c_puzzle8_strategist_v3b.ckpt  c_reddonkey_planner.ckpt  c_reddonkey_player.ckpt  c_shakespeare.ckpt  c_sudoku_planner.ckpt  c_sudoku_player.ckpt  c_tictactoe_player.ckpt
models/foundation/: shakespeare_word.ckpt
models/organelles/: c_codegen.ckpt  c_judge.ckpt  c_planner.ckpt  c_wiringgen.ckpt  connect4_planner.ckpt  connect4_player.ckpt  hex_player.ckpt  lightsout_planner.ckpt  market_analyser.ckpt  market_regime.ckpt  market_rotator.ckpt  othello_planner.ckpt  pentago_planner.ckpt  pentago_player.ckpt  puzzle8_detector_v3b.ckpt  puzzle8_detour_mover_v3b.ckpt  puzzle8_judge_v3b.ckpt  puzzle8_mover_v3b.ckpt  tictactoe_planner.ckpt
src/: README.md  microgpt.c  microgpt.h  microgpt_metal.h  microgpt_metal.m  microgpt_metal.metal  microgpt_organelle.c  microgpt_organelle.h  microgpt_thread.h  microgpt_vm.c  microgpt_vm.h  microgpt_vm.l  microgpt_vm.y  microgpt_vm_parser.l.c  microgpt_vm_parser.tab.c  microgpt_vm_parser.tab.h
tests/: bench.h  bench_microgpt.c  bench_microgpt_organelle.c  bench_microgpt_vm.c  bench_ssd.c  test.h  test_microgpt.c  test_microgpt_organelle.c  test_microgpt_vm.c
tests/resources/: ts_wiring.txt
tools/: vocab_analysis.c
(+166 files in other folders)
